--- a/src/bai-viet/baiviet.html
+++ b/src/bai-viet/baiviet.html
@@ -16,48 +16,65 @@
     <header class="bg-white border-b border-gray-300 shadow-lg fixed top-0 left-0 right-0 z-50">
         <div class="max-w-[1170px] mx-auto">
             <div class="flex justify-between items-center px-[15px] md:px-0">
-                <div class="md:hidden w-[30px] flex items-center">
-                    <div class="w-[24px]">
-                        <img class="w-full object-cover" src="../assets/images/img-andrew/menu-header.svg" alt="">
+                <a class="cursor-pointer" href="../bai-viet/nomal.html">
+                    <div class="md:hidden w-[30px] flex items-center">
+                        <div class="w-[24px]">
+                            <img class="w-full object-cover" src="../assets/images/img-andrew/menu-header.svg" alt="">
+                        </div>
                     </div>
-                </div>
-                <div class="w-[138px] md:w-[229px] pb-[16px] pt-[8px] md:pb-[18px] md:pt-[18px]">
-                    <img src="/src/assets/images/img-dzung/logo.png" alt="Nông Thảo" class="w-full object-cover">
-                </div>
+                </a>
+                <a class="cursor-pointer" href="../trang-chu/trang-chu.html">
+                    <div class="w-[138px] md:w-[229px] pb-[16px] pt-[8px] md:pb-[18px] md:pt-[18px]">
+                        <img src="/src/assets/images/img-dzung/logo.png" alt="Nông Thảo" class="w-full object-cover">
+                    </div>
+                </a>
                 <nav class="hidden md:flex flex-1 justify-center">
                     <ul class="flex gap-[32px]">
                         <li>
-                            <a href="#"
+                            <a href="../trang-chu/thao-duoc.html"
                                 class="font-nunito text-gray-700 font-semibold text-base hover:text-[#356C07] transition duration-300">SẢN
                                 PHẨM</a>
                         </li>
                         <li>
-                            <a href="#"
+                            <a href="../danh-muc-page/home.html"
                                 class="font-nunito text-gray-700 font-semibold text-base hover:text-[#356C07] transition duration-300">VỀ
                                 NÔNG THẢO</a>
                         </li>
                         <li>
-                            <a href="#"
+                            <a href="../danh-muc-page/about.html"
                                 class="font-nunito text-gray-700 font-semibold text-base hover:text-[#356C07] transition duration-300">BLOG</a>
                         </li>
                         <li>
-                            <a href="#"
+                            <a href="../danh-muc-page/hotline.html"
                                 class="font-nunito text-gray-700 font-semibold text-base hover:text-[#356C07] transition duration-300">LIÊN
                                 HỆ</a>
                         </li>
                     </ul>
                 </nav>
-                <div class="w-[30px] md:w-[229px] flex items-center justify-end gap-[17px]">
-                    <button class="w-[36px] hidden md:block">
-                        <img src="/src/assets/images/img-dzung/search.png" alt="Search" class="w-full object-cover">
-                    </button>
-                    <button class="w-[38px]">
-                        <img src="/src/assets/images/img-dzung/cart.png" alt="Cart" class="w-full object-cover">
-                    </button>
-                </div>
+                <a class="cursor-pointer" href="../bai-viet/404.html">
+                    <div class="w-[30px] md:w-[229px] flex items-center justify-end gap-[17px]">
+                        <button class="w-[36px] hidden md:block">
+                            <img src="/src/assets/images/img-dzung/search.png" alt="Search" class="w-full object-cover">
+                        </button>
+                        <button class="w-[38px]">
+                            <img src="/src/assets/images/img-dzung/cart.png" alt="Cart" class="w-full object-cover">
+                        </button>
+                    </div>
+                </a>
             </div>
         </div>
     </header>
+    <div class="md:hidden flex flex-col fixed bottom-[19px] right-[10px] items-center">
+        <div class="w-[48px]">
+            <img class="w-full object-cover" src="../assets/images/img-andrew/icon-telephone.svg" alt="">
+        </div>
+        <div class="w-[48px] mt-[12px]">
+            <img class="w-full object-cover" src="../assets/images/img-andrew/icon-mess.svg" alt="">
+        </div>
+        <div class="cursor-pointer w-[32px] mt-[80px]">
+            <img class="w-full object-cover" src="../assets/images/img-andrew/icon-scroll.svg" alt="">
+        </div>
+    </div>
     <div class=" bg-gray-200 pt-[80px] mx-auto">
         <div class="max-w-[1920px] mx-auto ">
             <div class="max-w-[1170px] bg-white mx-auto sm:w-full">
