--- a/src/danh-muc-page/order-success.html
+++ b/src/danh-muc-page/order-success.html
@@ -64,6 +64,17 @@
                 </div>
             </div>
         </header>
+        <div class="md:hidden flex flex-col fixed bottom-[19px] right-[10px] items-center">
+            <div class="w-[48px]">
+                <img class="w-full object-cover" src="../assets/images/img-andrew/icon-telephone.svg" alt="">
+            </div>
+            <div class="w-[48px] mt-[12px]">
+                <img class="w-full object-cover" src="../assets/images/img-andrew/icon-mess.svg" alt="">
+            </div>
+            <div class="cursor-pointer w-[32px] mt-[80px]">
+                <img class="w-full object-cover" src="../assets/images/img-andrew/icon-scroll.svg" alt="">
+            </div>
+        </div>
         <div class="mt-[80px] md:mt-[120px] mx-auto w-full max-w-[1170px] bg-[#ffffff] px-[16px] md:px-0">
             <div class="flex flex-col md:flex-row">
                 <div class="flex-1">
@@ -82,9 +93,12 @@
                             <div class="text-center font-nunito mt-[20px] text-gray-700">Trong mọi trường hợp cần hỗ trợ
                                 nhanh chóng. Hãy gọi <span
                                     class="font-nunito font-[800] text-red-600">0969.71.6848</span></div>
-                            <div
-                                class="font-nunito text-white text-[18px] font-[700] px-[37px] py-[13px] bg-red-600 rounded-[3px] mt-[29px]">
-                                QUAY LẠI TRANG CHỦ</div>
+                            <a href="../trang-chu/trang-chu.html">
+                                <div
+                                    class="font-nunito text-white text-[18px] font-[700] px-[37px] py-[13px] bg-red-600 rounded-[3px] mt-[29px]">
+                                    QUAY LẠI TRANG CHỦ
+                                </div>
+                            </a>
                         </div>
                     </div>
                 </div>
