--- a/src/trang-chu/thong-tin-don-hang.html
+++ b/src/trang-chu/thong-tin-don-hang.html
@@ -45,6 +45,17 @@
         </div>
     </div>
 </header>
+<div class="md:hidden flex flex-col fixed bottom-[19px] right-[10px] items-center">
+    <div class="w-[48px]">
+        <img class="w-full object-cover" src="../assets/images/img-andrew/icon-telephone.svg" alt="">
+    </div>
+    <div class="w-[48px] mt-[12px]">
+        <img class="w-full object-cover" src="../assets/images/img-andrew/icon-mess.svg" alt="">
+    </div>
+    <div class="cursor-pointer w-[32px] mt-[80px]">
+        <img class="w-full object-cover" src="../assets/images/img-andrew/icon-scroll.svg" alt="">
+    </div>
+</div>
 <div class="w-[100%] mx-auto ">
     <div class="flex justify-center pt-5">
         <div class="flex gap-4 items-center w-[1170px]">
