--- a/src/danh-muc-page/home.html
+++ b/src/danh-muc-page/home.html
@@ -62,6 +62,18 @@
             </div>
         </header>
         <div>
+            <div class="md:hidden flex flex-col fixed bottom-[19px] right-[10px] items-center">
+                <div class="w-[48px]">
+                    <img class="w-full object-cover" src="../assets/images/img-andrew/icon-telephone.svg" alt="">
+                </div>
+                <div class="w-[48px] mt-[12px]">
+                    <img class="w-full object-cover" src="../assets/images/img-andrew/icon-mess.svg" alt="">
+                </div>
+                <div class="cursor-pointer w-[32px] mt-[80px]">
+                    <img class="w-full object-cover" src="../assets/images/img-andrew/icon-scroll.svg" alt="">
+                </div>
+            </div>
+            <!--  -->
             <div class="max-w-[1920px] mx-auto mt-[50px] md:mt-[80px]">
                 <div class="h-[103px] md:h-auto w-full relative">
                     <img class="w-full h-full object-cover" src="../assets/images/img-andrew/bg-home1.svg" alt="">
